<resources>
    <string name="app_name">Monitor</string>
    <string name="dismiss">dismiss</string>
    <string name="snooze">Accept</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="welcome">Welcome</string>
    <string name="name">Enter your name</string>
    <string name="confirm_password">confirm_password</string>
    <string name="sign_up">Sign up</string>
    <string name="existing_user_login_here">Existing User Login Here</string>
    <string name="enable_location">Please enable location services</string>
    <string name="enable_it">Enable it</string>
    <string name="cancel">Cancel</string>
    <string name="tryagain">Try Again?</string>
    <string name="provide_contact">Enter mobile number</string>
    <string name="field_empty">Enter password</string>
    <string name="confirmpassword">Confirm your password</string>
    <string name="password_didntmatch">Password didn\'t match</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enter_name">Please provide your name</string>
    <string name="enter_city">Please select city</string>
    <string name="enter_user_type">Please select user type</string>

    <string-array name="user_type">

        <item>Select User Type</item>
        <item>Image</item>
        <item>Print</item>
        <item>Magazine</item>

    </string-array>

    <string-array name="city_type">
        <item>Select City</item>
        <item>Jaipur</item>
        <item>Gurgaon</item>
        <item>Hyderabad</item>
        <item>Delhi</item>

    </string-array>

</resources>
