<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="#fff"

        android:layout_height="match_parent">


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fillViewport="true"
            android:orientation="vertical">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                tools:context="com.example.harpreet.scrapper.LoginActivity">


                <ImageView
                    android:id="@+id/shimmer_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"

                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/okhlee_logo" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sp_choice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_below="@+id/shimmer_tv"

                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="60dp"
                    android:textColorHint="#7c879f">

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/mobile"
                        android:hint="@string/mobile_number"
                        android:maxLength="10"
                        android:inputType="numberSigned"


                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordwrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/sp_choice"
                    android:layout_alignStart="@+id/sp_choice"
                    android:layout_below="@+id/sp_choice"
                    android:layout_marginTop="40dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/password"
                        android:hint="@string/password"
                        android:inputType="textPassword"

                        />


                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:id="@+id/fl_login"
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:layout_below="@+id/passwordwrapper"


                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_background"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:foreground="?selectableItemBackground"


                    >
                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/alegreya_sans_sc"

                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <ProgressBar
                        android:id="@+id/pb_progres"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Password?"
                    android:padding="10dp"
                    android:fontFamily="@font/alegreya_sans_sc"

                    android:onClick="forgotPassword"
                    android:layout_below="@+id/fl_login"
                    android:layout_centerHorizontal="true"
                    />


                <!--   <Button
                       android:id="@+id/login"
                       android:layout_width="wrap_content"
                       android:layout_height="45dp"

                       android:layout_alignEnd="@+id/passwordwrapper"
                       android:layout_alignStart="@+id/passwordwrapper"

                       android:layout_below="@+id/rg_lang"
                       android:layout_marginTop="40dp"
                       android:background="@drawable/button_background"
                       android:fontFamily="sans-serif-medium"
                       android:gravity="center"

                       android:text="@string/login"

                       android:textColor="#ffffff"
                       android:textSize="20sp"
                       android:textStyle="normal" />
           -->
                <!--<TextView
                    android:id="@+id/tv_forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="28dp"
                    android:text="TextView" />
            -->

                <!--<TextView
                    android:id="@+id/tv_forgotpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_below="@+id/fl_login"

                    android:layout_marginBottom="80dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:padding="5dp"

                    android:text="@string/forgot_password"
                    android:textColor="#7c879f"
                    android:textSize="17sp"
                    android:textStyle="normal" />

-->
                <android.support.v7.widget.CardView
                    android:id="@+id/cardLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="50dp"


                    app:cardElevation="10dp">


                    <TextView
                        android:id="@+id/tv_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alegreya_sans_sc"


                        android:gravity="center"

                        android:padding="15dp"
                        android:text="@string/create_new_account"
                        android:textColor="#0f5e54"

                        android:textSize="20sp"
                        android:textStyle="normal" />
                </android.support.v7.widget.CardView>


            </RelativeLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/reveal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:visibility="invisible"

            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:src="@drawable/okhlee_monitor5"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="#fff"
                android:gravity="center"
                android:textSize="30sp"
                />

        </RelativeLayout>
    </RelativeLayout>

</layout>